@@ -1,7 +1,8 @@
 python-apt (0.8.0~exp1) UNRELEASED; urgency=low
 
   * Disable the old-style API, and break all packages using it
-  * Add an 'is_multi_arch' attribute to apt_pkg.Cache 
+  * Add an 'is_multi_arch' attribute to apt_pkg.Cache
+  * Add apt_pkg.Group class, wrapping pkgCache::GrpIterator
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 10:33:54 +0200
 
